@@ -9,6 +9,8 @@ Revision history for Dancer::Plugin::Cache::CHI
 
  [ENHANCEMENTS]
  - add 'before_create_cache' hook
+ - now http headers of cached response are saved as well,
+     and we're not using 'halt' anymore. (patch by Perlover)
 
 1.1.0 2011-08-24
  [ENHANCEMENTS]
